--- a/src/Menu.css
+++ b/src/Menu.css
@@ -6,7 +6,7 @@
   width: calc(100% + 10px);
   max-height: 400px;
   margin-top: 5px;
-  padding-top: 10px;
+  padding: 5px 0 15px;
   overflow: auto;
   display: flex;
   flex-flow: column;
@@ -45,7 +45,6 @@
 }
 
 .menu__item {
-  margin: 1px;
   padding: 4px 6px;
   cursor: pointer;
   color: #0A5794;
