--- a/src/Menu.css
+++ b/src/Menu.css
@@ -39,9 +39,9 @@
   font-size: 10px;
 }
 .menu__section-items {
-  -moz-column-width: 100px;
-  -webkit-column-width: 100px;
-  column-width: 100px;
+  -moz-columns: 3 100px;
+  -webkit-columns: 3 100px;
+  columns: 3 100px;
 }
 
 .menu__item {
