--- a/src/Menu.css
+++ b/src/Menu.css
@@ -33,15 +33,22 @@
 
 .menu__section-name {
   flex-shrink: 0;
-  width: 80px;
+  width: 70px;
   padding-top: 6px;
   text-transform: uppercase;
   font-size: 10px;
 }
 .menu__section-items {
-  -moz-columns: 3 100px;
-  -webkit-columns: 3 100px;
-  columns: 3 100px;
+  flex-grow: 1;
+  display: flex;
+  flex-flow: row nowrap;
+}
+.menu__col {
+  width: calc(100% / 3);
+  flex-grow: 1;
+  flex-shrink: 0;
+  box-sizing: border-box;
+  padding-right: 40px;
 }
 
 .menu__item {
@@ -51,7 +58,7 @@
 }
 
 .menu__empty-state {
-  padding: 10px 0 20px;
+  padding: 15px 0 10px;
   font-size: 18px;
   color: #999;
 }
